--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "توكن حقكك هنا",
-"prefix": "بريفكس",
-"owner": ["id حسابك"]
+"token": "MTAzNTU1OTU5MTgwODg2ODM2Mw.GSGe0y.TPZkjPmpTvDwhiUSdqb7puJ-oZu1QfVd9mmmIo",
+"prefix": "#",
+"owner": ["#"]
 }
