--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "MTAzNTU1OTU5MTgwODg2ODM2Mw.GSGe0y.TPZkjPmpTvDwhiUSdqb7puJ-oZu1QfVd9mmmIo",
+"token": "MTA0OTM5NTM5ODQ2MjE2NTAyMg.GVEZIG.Ahh3k-8mpcvkVKNfdfzqj57cgWQjdTP_StvQvc",
 "prefix": "#",
 "owner": ["#"]
 }
